# video_series_studio

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vscs/: __init__.py  main.py
src/vscs/app/: __init__.py
src/vscs/application/: __init__.py
src/vscs/application/assets/: __init__.py  repository.py  service.py
src/vscs/application/caps/: __init__.py  repository.py  service.py
src/vscs/application/projects/: __init__.py  service.py
src/vscs/domain/: __init__.py
src/vscs/domain/assets/: __init__.py  models.py
src/vscs/domain/caps/: __init__.py  models.py
src/vscs/domain/projects/: __init__.py  models.py
src/vscs/infrastructure/: __init__.py
src/vscs/infrastructure/configuration/: __init__.py  models.py  service.py
src/vscs/infrastructure/database/: __init__.py  manager.py  models.py  repository.py
src/vscs/infrastructure/logging/: __init__.py  service.py
src/vscs/infrastructure/plugins/: __init__.py  api.py  manager.py  manifest.py
src/vscs/infrastructure/services/: __init__.py  service.py
src/vscs/plugins/: __init__.py
src/vscs/presentation/: __init__.py
src/vscs/presentation/dialogs/: plugin_manager_dialog.py  settings_dialog.py
src/vscs/presentation/widgets/: asset_manager.py  cap_manager.py  dashboard.py
src/vscs/shared/: __init__.py
tests/: test_logging_service.py
tests/unit/: test_application_services.py  test_asset_manager.py  test_cap_manager.py  test_configuration_service.py  test_database_manager.py  test_main_window.py  test_plugin_manager.py  test_project_service.py
(+1 files in other folders)
