[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "video-series-studio"
version = "0.1.0"
description = "Video Series Creation System (VSCS) framework"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [{ name = "Neill Payne" }]
dependencies = [
  "PySide6>=6.8",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "SQLAlchemy>=2.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "pytest-qt>=4.4",
  "ruff>=0.9",
  "mypy>=1.14",
  "pre-commit>=4.0",
  "types-PyYAML>=6.0",
]

[project.scripts]
vscs = "vscs.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vscs"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["vscs"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["vscs"]
warn_unused_configs = true
